Assignment2_5 fixed header align?

--- a/web/style.css
+++ b/web/style.css
@@ -1,6 +1,5 @@
 .header_container
 {
     width: 640px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
 }
